# qwenasr.cpp

./: .gitignore  CMakeLists.txt  README.md  convert.py  pyproject.toml
benchmarks/: bench_audio_cnn.py  bench_audio_conv0.py  bench_audio_encoder.py  bench_audio_layer0.py  bench_audio_prep.py  bench_decoder_input.py  bench_text_generate.py  bench_text_layer0.py  bench_text_prefill.py  check_audio_cnn.py  check_audio_conv0.py  check_audio_encoder.py  check_audio_features.py  check_audio_layer0.py  check_audio_prep.py  check_decoder_input.py  check_text_generate.py  check_text_layer0.py  check_text_prefill.py  check_tokenizer.py  compare_cpp.py  compare_parakeet.py  profile_torch.py  throughput.py
examples/: streaming.py  transcribe.py
qwenasr_cpp/: __init__.py  __main__.py  audio.py  cli.py  model.py  torch_backend.py
src/: audio-conv.cpp  audio-conv.h  audio-encoder.cpp  audio-encoder.h  audio-features.cpp  audio-features.h  decoder-input.cpp  decoder-input.h  ggml-backends.cpp  ggml-backends.h  gguf-model.cpp  gguf-model.h  native-model.cpp  native-model.h  qwenasr.cpp  qwenasr.h  text-decoder.cpp  text-decoder.h  tokenizer.cpp  tokenizer.h
tests/: test_convert.py  test_public_api.py
tools/: qwen-asr-audio-cnn.cpp  qwen-asr-audio-conv.cpp  qwen-asr-audio-encoder.cpp  qwen-asr-audio-layer.cpp  qwen-asr-audio-prep.cpp  qwen-asr-decoder-input.cpp  qwen-asr-features.cpp  qwen-asr-gguf-info.cpp  qwen-asr-text-layer.cpp  qwen-asr-tokenize.cpp  qwen-asr-weights.cpp  qwen-asr.cpp
