[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qwenasr-cpp"
version = "0.1.0"
description = "Native C++/GGML Qwen3-ASR implementation and GGUF conversion tools"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Andres Marafioti" }]
requires-python = ">=3.10"
keywords = ["asr", "qwen", "qwen3", "ggml", "gguf", "speech", "transcription"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
convert = [
    "gguf>=0.19.0",
    "safetensors",
]
dev = [
    "pytest>=8",
    "ruff>=0.8",
]

[project.urls]
Homepage = "https://github.com/andimarafioti/qwenasr.cpp"
Repository = "https://github.com/andimarafioti/qwenasr.cpp"

[tool.setuptools]
py-modules = ["convert"]

[tool.ruff]
line-length = 100
target-version = "py310"
